<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="subtitle">My Nanodegree Apps!</string>
    <string name="popular_movies_app">Popular Movies</string>
    <string name="stock_hawk_app">Stock Hawk</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="material_app">Make your app material</string>
    <string name="go_ubiquitous_app">Go Ubiquitous</string>
    <string name="capstone_app">Capstone</string>
    <string name="message">This button will launch my %1$s app!</string>
    <string name="no_app_message">Sorry, the %1$s app could not be found. Is it installed?</string>
</resources>
