<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ianribas.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            style="@style/subtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle" />

        <Button
            android:id="@+id/btPopularMovies"
            style="@style/AppButtonStyle"
            android:text="@string/popular_movies_app" />

        <Button
            android:id="@+id/btStockHawk"
            style="@style/AppButtonStyle"
            android:text="@string/stock_hawk_app" />

        <Button
            android:id="@+id/btBuildBigger"
            style="@style/AppButtonStyle"
            android:text="@string/build_it_bigger_app" />

        <Button
            android:id="@+id/btMaterial"
            style="@style/AppButtonStyle"
            android:text="@string/material_app" />

        <Button
            android:id="@+id/btGoUbiquitous"
            style="@style/AppButtonStyle"
            android:text="@string/go_ubiquitous_app" />

        <Button
            android:id="@+id/btCapstone"
            style="@style/AppButtonStyle"
            android:text="@string/capstone_app" />

    </LinearLayout>
</ScrollView>